# rain.cli

./: Cargo.toml  README.md  flake.nix  shell.nix
.github/workflows/: build.yaml  rainix.yaml
src/: main.rs
