[package]
name = "rain_cli"
version = "0.9.0"
edition = "2021"
license = "CAL-1.0"
description = "Aggregated binary across all native Rain tooling."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.5", features = ["cargo", "derive"] }
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
rain_cli_ob = "0.0.4"
rain_cli_meta = "0.10.0"
dotrain = { git = "https://github.com/rainlanguage/dotrain", rev = "ad8493db3206958bcb821202777026c735197ae4", features = ["cli"] }

[[bin]]
name = "rain"
path = "src/main.rs"