[package]
name = "rain_cli"
version = "0.9.1-alpha.4"
edition = "2021"
license = "CAL-1.0"
description = "Aggregated binary across all native Rain tooling."
repository = "https://github.com/rainlanguage/rain.cli"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.5", features = ["cargo", "derive"] }
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
rain_cli_ob = "0.0.4"
rain_cli_meta = "0.10.0"
dotrain = { version = "6.0.1-alpha.10", features = ["cli"] }

[[bin]]
name = "rain"
path = "src/main.rs"
